apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__insert_with_requires-6.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 432
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "Test",
        "shippingEstimate": 15,
        "price": 150
      }
    ]
  }
}
