apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__missing_entities.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 1096
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": "Organization 1"
        },
        {
          "id": "2",
          "name": "Organization 2"
        }
      ]
    }
  }
}
