apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__no_cache_control-3.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 659
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "no-store",
)
