apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__no_cache_control.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 632
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "no-store",
)
